--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body{
-  background-color: rgb(189, 205, 214);
+  background-color: white;
 }
 
 /**TOP NAV CSS */
 nav{
   width: 100%;
   height: 80px;
-  background-color: rgb(96, 150, 180);
+  background-color: rgba(238, 238, 238, 1);
 }
 
 .title{
@@ -15,20 +15,31 @@ nav{
   padding: 0 100px;
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color:rgb(238, 233, 218)
+  color:black;
 }
 
 nav ul{
   float: right;
-  margin-right: 30px;
+
 }
 nav ul li{
   display: inline-block;
-  line-height: 80px;
+  line-height: 50px;
   font-size: 17px;
-  color: rgb(238, 233, 218);
+  font-weight: 600;
+  color: black;
   text-transform: uppercase;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0 5px;
+  padding-right: 100px;
+}
+
+#navbreak{
+  position: absolute;
+  width: 100%;
+  top: 80px; 
+  
+
 }
 
 /**END OF TOP NAV CSS */
@@ -70,18 +81,42 @@ nav ul li{
     opacity:0;
     }
     .mainImage{
-        width: 1000px;
-        height: 310px;
+        width: 100%;
+        height: 850px;
         position: absolute;
         transform: translate(-50%,-50%);
-        top: 30%;
+        top: 515px;
         left: 50%;
         overflow:hidden;
-        border: 10px solid #ffffff;
+        border: 1px solid #ffffff;
         border-radius: 8px;
         box-shadow: -1px 5px 15px black;
         border-image-width: 1000px;
         
+    }
+
+    .tag_container{
+      width: 700px;
+      height: 150px;
+      background-color: rgb(180, 178, 178);
+      position: absolute;
+      border: 1px solid black;
+      opacity: 0.9;
+
+      left: 620px;
+      top: 300px;
+    
+      
+    }
+    .tagline{
+      position: relative;
+      
+      
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-weight: 600;
+      font-size: 50px;
+      color: black;
+      
     }
 
 
@@ -98,7 +133,7 @@ nav ul li{
   position: relative;
   width: 100%;
   height: 1px;
-  top: 250px;
+  top: 1500px;
 
 
 }
