--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@ nav{
   background-color: #24252A;
 }
 
-.title{
+.navtitle{
   font-size: 35px;
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color:#edf0f1;
+  color: #edf0f1;
   cursor: pointer;
 }
 
@@ -55,7 +55,9 @@ li:hover{
 /**END OF TOP NAV CSS */
 
 
-    
+ 
+/** MAIN IMAGE AND TAGLINE*/
+
     @keyframes cf3FadeInOut {
       0% {
       opacity:1;
@@ -130,7 +132,92 @@ li:hover{
       background-color: #24252A;
       
     }
+/** MAIN IMAGE AND TAGLINE*/
 
+
+/** FOOD PART*/
+
+.FoodCatPart-Row{
+  height: 400px;
+  width: 100%;
+  background-color: #24252A;
+  padding: 20px;
+  contain: content;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  top: 836px;
+  border: 1px solid white;
+
+  
+  
+  
+}
+
+.caption{
+  text-align: center;
+  text-decoration: none;
+  position: absolute;
+  color: #edf0f1;
+  margin-left: 100px;
+}
+
+.caption::before{
+content: '';
+background-color: #24252A;
+position: absolute;
+left: 0;
+bottom: 3px;
+width: 100%;
+height: 8px;
+z-index: -1;
+transition: all .3s ease-in-out;
+}
+
+.caption:hover::before {
+  bottom: 0;
+  height: 100%;
+}
+
+.image{
+  width: 250px;
+  height: 350px;
+}
+
+.bahay{
+  contain: content;
+}
+
+.title{
+  color: black;
+}
+.category{
+  background-color: #24252A;
+}
+
+.name{
+	font-size: 20px;
+	text-transform: uppercase;
+	transition: 700ms ease;
+	font-variation-settings: "wght" 311;
+	margin-bottom: 0.8rem;
+	outline: none;
+	text-align: center;
+}
+.name:hover {
+	font-variation-settings: "wght" 582; 
+	letter-spacing: 2px;
+	color: salmon;
+	text-decoration: underline;
+  }
+
+  .def{
+    font-size: 20px;
+    text-align: center;
+  }
+
+/** FOOD PART*/
 
 /**FOOTER*/
 
@@ -144,16 +231,16 @@ li:hover{
 .footer_container{
   position: relative;
   width: 100%;
-  height: 180px;
+  height: 150px;
   top: 1500px;
   background-color: #edf0f1;
   
-
-
 }
 
 .footer_list{
   position: absolute;
+  width: 100%;
+  
 }
 
 .footer_title{
@@ -163,74 +250,134 @@ li:hover{
   color:black;
 
   position: absolute;
-  top: 5px;
-  left: 40px;
-
+  top: 2px;
+  left: 500px;
 }
 
 .footer_text{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 0px 5px 5px 30px;
   color:#24252A;
+  list-style-type: none;
 
   position: absolute;
-  top: 5px;
-  left: 70px;
+  top: 2px;
+  left: 400px;
   padding: 15px 15px 15px 15px;
 }
 
-#about{
+.footerli{
   padding-bottom: 5px;
-  font-weight: 500;
+  font-weight: 600;
 }
-#blog{
-  padding-bottom: 5px;
-  font-weight: 500;
-}
-#recipes{
-  padding-bottom: 5px;
-  font-weight: 500;
-}
-#contact{
-  font-weight: 500;
-}
-
-#c{
-  position: absolute;
-  left: 79%;
-  margin-top: 100px;
-
+ 
+.footer_title2{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  color:black;
+
+  position: absolute;
+  top: 2px;
+  left: 950px;
+}
+
+.footer_text2{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 0px 5px 5px 30px;
+  color:#24252A;
+  list-style-type: none;
+
+  position: absolute;
+  top: 2px;
+  left: 850px;
+  padding: 15px 15px 15px 15px;
+}
+
+.footer_title3{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  color:black;
+
+  position: absolute;
+  top: 2px;
+  left: 1300px;
 }
 
 #fb{
   position: absolute;
   margin-top: 10px;
-  left: 80%;
+  left: 64%;
   height: 50px;
   width: 50px;
+  top: 50px;
 }
 #instagram{
   position: absolute;
   margin-top: 10px;
-  left: 84%;
+  left: 68%;
   height: 50px;
   width: 50px;
+  top: 50px;
 }
 #pinterest{
   position: absolute;
   margin-top: 10px;
-  left: 88%;
+  left: 72%;
   height: 50px;
   width: 50px;
+  top: 50px;
 }
 #twitter{
   position: absolute;
   margin-top: 10px;
-  left: 92%;
+  left: 76%;
   height: 50px;
   width: 50px;
+  top: 50px;
 }
+
+#c{
+  position: relative;
+  top: 1480px;
+  height: 25px;
+  width: 100%;
+  background-color: #24252A;
+  padding: 1px 1px 1px 1px;
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #edf0f1;
+}
+
+.footer_title:hover{
+  color: #edf0f1;
+  background-color: #24252A;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.footer_title2:hover{
+  color: #edf0f1;
+  background-color: #24252A;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.footer_title3:hover{
+  color: #edf0f1;
+  background-color: #24252A;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.footerli:hover{
+  color: #edf0f1;
+  background-color: #24252A;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
     
 /**END OF FOOTER*/
 
