--- a/style.css
+++ b/style.css
@@ -185,6 +185,33 @@ body, html{
       text-align: center;
     }
   
+/** DISHES RECOMMENDATION*/
+
+div.gallery {
+  margin: 18px;
+  float: left;
+  width: 150px;
+}
+
+div.gallery:hover {
+  border: 2px solid lightskyblue;
+}
+
+div.gallery img {
+  width: 150px;
+  height: 120px;
+  border-radius: 50%;
+}
+
+div.desc {
+  padding: 5px;
+  text-align: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/** DISHES RECOMMENDATION END*/
+
+
   /** FOOD PART*/
 
 /**FOOTER*/
