--- a/style.css
+++ b/style.css
@@ -4,25 +4,26 @@ body, html{
     margin: 0;
     padding: 0;
     background-size: cover;
-
     letter-spacing: 1px;
+    overflow-x: hidden;
 }
 
 .nav{
     align-items: center;
     overflow: hidden;
-    font-weight: 600;
+    font-weight: 700;
+    height: 60px;
+    width: 100%;
     cursor: pointer;
     background-color: white;
     color: black;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    
+   font-family:Georgia, 'Times New Roman', Times, serif;
+   
 }
 
 .nav li{
     float: left;
     display: block;
-    color: black;
     text-align: center;
     letter-spacing: 2px;
     text-decoration: none;
@@ -36,7 +37,6 @@ body, html{
 
 .nav li.left{
     float: right;
-    color: black;
    
 }
 
@@ -57,14 +57,14 @@ body, html{
   .tagline{
     font-size: 30px;
     position: absolute;
-    color: white;
+    color: #E7AB9A;
     text-align: center;
     padding: 10px;
     width: fit-content;
     margin-top: 15%;
-    margin-left: 30%;
+    margin-left: 22%;
     opacity: 0.8;
-    text-shadow: 2px 2px peru;
+    text-shadow: 2px 2px white;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    }
 
@@ -72,7 +72,7 @@ body, html{
        width: 100%;
        height: 650px;
        position: relative;
-
+       box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
      }
    
    .mainImage img {
@@ -109,8 +109,8 @@ body, html{
 /** FOOD PART*/
 
 .FoodCatPart-Row{
-    background-color: salmon;
-    padding: 35px;
+
+    padding: 45px;
     contain: content;
     display: flex;
     justify-content: space-evenly;
@@ -120,55 +120,32 @@ body, html{
   }
   
 .caption{
-   margin-top: 20%;
+    text-align: center;
+    background-color: #E7AB9A;
     text-decoration: none;
     position: absolute;
     color: black;
-    margin-left: 110px;
-    
+    margin-left: 90px;
+    font: bold;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
   
-  .caption::before{
-  content: '';
-  background-color:darksalmon;
-  position: absolute;
-  left: 0;
-  bottom: 3px;
-  width: 100%;
-  height: 8px;
-  z-index: -1;
-  transition: all .3s ease-in-out;
-  }
-  
-  .caption:hover::before {
-    bottom: 0;
-    height: 100%;
-  }
+
+
   
   .image{
     width: 250px;
     height: 350px;
-  }
-  .imageMeal{
-    width: 250px;
-    height: 350px;
-    margin:20px;
-    padding: 3px;
-    float:left;
-	  -webkit-transition:  0.5s ease-out;
-    -moz-transition: 0.5s ease-out; 
-    -o-transition:  0.5s ease-out;
-  }
 
-  .imageMeal:hover{
-    cursor:pointer;
-    margin-top: 5px;
   }
   
   .title{
     font-size: 25px;
     color: black;
-    background-color: salmon;
+    background-color: #E7AB9A;
     text-align: center;
     padding: 3px;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -177,10 +154,16 @@ body, html{
 
   .bahay{
     contain: content;
-    margin-top: 17%;
+    margin-left: 30px;
+    margin-right: 30px;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   }
   
-  
+
+.wew{
+  width: max-content;
+
+}
   .name{
       font-size: 20px;
       text-transform: uppercase;
@@ -203,26 +186,32 @@ body, html{
     }
   
   /** FOOD PART*/
-/** Food Pictures*/
-div.gallery {
-  margin: 18px;
-  float: left;
-  width: 150px;
+
+/** Food Pictures Erika */
+div.foodGal {
+  padding: 35px;
+  contain: content;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid white;
 }
 
 
-div.gallery img {
-  width: 150px;
-  height: 120px;
+div.foodGal img {
+  width: auto;
+  height: 70px;
   border-radius: 100%;
+  padding: 2px;
 }
 
-div.desc {
-  padding: 5px;
+.Galcaption {
   text-align: center;
 }
-/** Food Pictures*/
+/** Food Pictures Erika*/
+
 /**FOOTER*/
+
 
 #break{
     color: black;
@@ -339,7 +328,8 @@ div.desc {
     background-color: #24252A;
     padding: 1px 1px 1px 1px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #edf0f1;
+    color: black;
+    background-color: #E7AB9A;
   }
   
   .footer_title:hover{
